--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <div id="credit">
         Made by Wez<br>
-        <span style="font-size: 14px; font-weight: normal; opacity: 0.8;">Discord: @yourusername</span>
+        <span style="font-size: 14px; font-weight: normal; opacity: 0.8;">Discord: @extremewez</span>
     </div>
 
     <div class="heart-bg" id="heart-container"></div>
@@ -201,3 +201,4 @@
     </script>
 </body>
 </html>
+
